Fixed one sentence.

--- a/zoran-CV-short.tex
+++ b/zoran-CV-short.tex
@@ -139,7 +139,7 @@ As a 0\% project launched www.google.co.yu. Launched www.google.cs. Launched www
 \item
 2005--2008: Systems Infrastructure, Google News Archive Search. As part of a small team with Yanghua Chu and Anurag Acharya (and later Dale Neal) designed and implemented Google News Archive Search. Implemented Google premium crawler. Implemented C++ frontend for News Archive Search (arfe). We launched News Archives in 2006 as part of news.google.com. Wrote all arfe-related borgcfg and related GFE and rpc-balancer rules. Worked with SRE teams to get required production Borg resources. Worked with PM teams to get all UI approved. Implemented most UI and Google-data-push (GDP) infrastructure for News Archives. Implemented all borgmon and related varz interfaces for arfe. Implemented backend APIs for Google one-box and news.google.com in arfe. Handled most of google.com traffic as Google News backend. Added support for pre-1970 dates for Google Search. Implemented and launched News Archive Search in several European languages. Launched Google Timeline. Implemented iGoogle module based on Archive Search. Worked with a team in India to include OCR documents from microfilms to News Archive Search.
 \item
-2009--2011: Google News. Joined Google News to own News Videos. Added user generated content from YouTube into Google News index. Designed, implemented and lunched this feature in production. Added news-video pubsub stream for Fresh Docs (Google real-time index at that time). Re-implemented search result pages for Google News back in GWS as part of One Google project (Google-wide project to provide unified infrastructure for search-result page rendering). On-call in production for Google News and News Archives. Launched Google News in several new languages including Serbian news.google.rs.
+2009--2011: Google News. Technical owner for videos in Google News. Added user generated content from YouTube into Google News index. Designed, implemented and lunched this feature in production. Added news-video pubsub stream for Fresh Docs (Google real-time index at that time). Re-implemented search result pages for Google News back in GWS as part of One Google project (Google-wide project to provide unified infrastructure for search-result page rendering). On-call in production for Google News and News Archives. Launched Google News in several new languages including Serbian news.google.rs.
 \item
 2012: YouTube. Joined YouTube to start a new experimental project YouTube News.
 %\item
