Added \url to enable copy-paste or click through.

--- a/zoran-CV-pub.tex
+++ b/zoran-CV-pub.tex
@@ -1,5 +1,7 @@
 \documentclass[10pt]{article}
 
+\usepackage[hidelinks]{hyperref}
+
 \setlength{\parindent}{0pt} \setlength{\oddsidemargin}{0in}
 \setlength{\evensidemargin}{0in} \setlength{\textwidth}{6.5in}
 \setlength{\headheight}{0in} \setlength{\headsep}{0in}
@@ -35,7 +37,8 @@
 \begin{center}
 {\em zorand@gmail.com}\\
 +1 (805) 259-5262\\
-http://3opan.net/$\sim$zorand
+\url{http://3opan.net/~zorand}
+%http://3opan.net/$\sim$zorand
 \end{center}
 
 %\section{Vita}
@@ -456,7 +459,7 @@ Z.~Dimitrijevi\'c, R.~Rangaswami, D.~Watson, and A.~Acharya.
 
 \vspace{-5pt}
 \hspace{0.25in} (Full papers are available on-line at 
-{\em http://3opan.net/$\sim$zorand/publications.html}.)
+\url{http://3opan.net/~zorand/publications.html}.)
 
 
 \section{Teaching Experience}
