Added google hiring committee.

--- a/zoran-CV-pub.tex
+++ b/zoran-CV-pub.tex
@@ -604,6 +604,7 @@ Muntz's group, UCLA, August 2002.
 2015 	& IEEE Senior Member. \\
 2015-present 	& Member of IEEE Computer Society Industry Advisory Board. \\
 2010 	& Google OC Award for Google File System. \\
+2007--2013      & Member of Google Hiring Committee for new-grad PhDs. \\
 2003 	& President's Work Study Award for 2003-2004, UCSB. \\
 2002	& Graduate Student Travel Grant, Graduate Division, UCSB.\\
 1999 	& Dean's Fellowship, College of Engineering, UCSB. \\
