Fixed for consistency.

--- a/zoran-CV-short.tex
+++ b/zoran-CV-short.tex
@@ -57,8 +57,8 @@
 2014-2017       & Altiscale Inc. acquired by SAP Labs, Palo Alto, California.\\
 2004-2013       & Google Inc., Mountain View, California.\\
 1999-2004	& Teaching and Research Assistant, 
-			CS and ECE Department, UCSB. \\
-Summer 2003	& Instructor (Teaching Associate), CS Department, UCSB. \\
+			CS and ECE Department, UCSB, California. \\
+Summer 2003	& Instructor (Teaching Associate), CS Department, UCSB, California. \\
 Summer 2001	& Research Scientist, Sony 550 Digital Media Ventures, 
 			San Francisco, California. \\
 Summer 2000	& Research Intern, HP Labs, Palo Alto, California. \\
