Added utf8 package

--- a/zoran-CV-short.tex
+++ b/zoran-CV-short.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt]{article}
 
 \usepackage[hidelinks]{hyperref}
+\usepackage[utf8]{inputenc}
 
 \setlength{\parindent}{0pt} \setlength{\oddsidemargin}{0in}
 \setlength{\evensidemargin}{0in} \setlength{\textwidth}{6.5in}
@@ -30,7 +31,8 @@
 
 \begin{center}
 \vspace{-1.5in}
-  {\Large\bf Zoran Dimitrijevi\'{c}}\\
+  %{\Large\bf Zoran Dimitrijevi\'{c}}\\
+  {\Large\bf Zoran Dimitrijević}\\
   {\large\em Curriculum Vitae}
 \end{center}
 
