--- a/zoran-CV-pub.tex
+++ b/zoran-CV-pub.tex
@@ -49,6 +49,14 @@
 %\end{tabular}
 
 \vspace{-5pt}
+\section{Technical Interests}
+Design and implementation of large-scale storage systems, quality of service, 
+parallel and cluster-based computing, multimedia systems, and large-scale 
+search engines. Security, privacy and encryption. News and citizen journalism. 
+Open Source.
+
+
+%\vspace{-5pt}
 \section{Experience Summary}
 
 \begin{tabular}{ll}
@@ -57,21 +65,14 @@
 2014-2017       & Altiscale Inc. acquired by SAP Labs, Palo Alto, California.\\
 2004-2013       & Google Inc., Mountain View, California.\\
 1999-2004	& Teaching and Research Assistant, 
-			CS and ECE Department, UCSB. \\
-Summer 2003	& Instructor (Teaching Associate), CS Department, UCSB. \\
+			CS and ECE Department, UCSB, California. \\
+Summer 2003	& Instructor (Teaching Associate), CS Department, UCSB, California. \\
 Summer 2001	& Research Scientist, Sony 550 Digital Media Ventures, 
 			San Francisco, California. \\
 Summer 2000	& Research Intern, HP Labs, Palo Alto, California. \\
 1998-1999	& Research Assistant, CE\&CS Department, University of Belgrade, Serbia.\\
 Fall 1997	& Research Intern, ECE Department, University of Campinas, Brazil. \\
 \end{tabular}
-
-\vspace{-5pt}
-\section{Technical Interests}
-Design and implementation of large-scale storage systems, quality of service, 
-parallel and cluster-based computing, multimedia systems, and large-scale 
-search engines. Security, privacy and encryption. News and citizen journalism. 
-Open Source.
 
 
 \section{Education}
