--- a/zoran-CV-short.tex
+++ b/zoran-CV-short.tex
@@ -51,6 +51,13 @@
 %\end{tabular}
 
 \vspace{-5pt}
+\section{Technical Interests}
+Design and implementation of large-scale storage systems, quality of service, 
+parallel and cluster-based computing, multimedia systems, and large-scale 
+search engines. Security, privacy and encryption. News and citizen journalism. 
+Open Source.
+
+%\vspace{-5pt}
 \section{Experience Summary}
 
 \begin{tabular}{ll}
@@ -67,13 +74,6 @@ Summer 2000	& Research Intern, HP Labs, Palo Alto, California. \\
 1998-1999	& Research Assistant, CE\&CS Department, University of Belgrade, Serbia.\\
 Fall 1997	& Research Intern, ECE Department, University of Campinas, Brazil. \\
 \end{tabular}
-
-\vspace{-5pt}
-\section{Technical Interests}
-Design and implementation of large-scale storage systems, quality of service, 
-parallel and cluster-based computing, multimedia systems, and large-scale 
-search engines. Security, privacy and encryption. News and citizen journalism. 
-Open Source.
 
 
 \section{Education}
