Added forgotten paper.

--- a/zoran-CV-pub.tex
+++ b/zoran-CV-pub.tex
@@ -383,6 +383,7 @@ Researched the susceptibility of operating systems and software to soft errors.
  \newblock {\bf JVM susceptibility to memory errors.}
  \newblock {\em Proceedings of Usenix Java[tm] Virtual Machine Research and Technology 
  Symposium}, pages 67--77, Monterey, California, April 2001.
+
 %\end{thebibliography}
 
 
@@ -441,6 +442,12 @@ Z.~Dimitrijevi\'c, R.~Rangaswami, D.~Watson, and A.~Acharya.
  Z.~Dimitrijevi\'c, R.~Rangaswami, and E.~Chang.
  \newblock {\bf Architectural Support for Preemptive RAID schedulers.}
  \newblock Usenix FAST WiP Report/Poster, March, 2004.
+
+\bibitem{hawaii}
+ V.~Milutinovic, et al.,
+ \newblock {\bf Research and development in e-business on the Internet.}
+ \newblock {\em Proceedings of the 34th Annual Hawaii International Conference on System Sciences},
+Maui, Hawaii, Januar 2001.
 
 \bibitem{limes-book}
  I.~Ikodinovi\'c, Z.~Dimitrijevi\'c, D.~Magdi\'c, A.~Milenkovi\'c, J.~Proti\'c, and 
